# dynamic_wallpaper

./: .build.yml  .editorconfig  .gitlab-ci.yml  .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: config.rs  error.rs  lib.rs  main.rs
tests/: integration_test.rs  test_config.toml
