[package]
name = "dynamic_wallpaper"
version = "0.1.2"
authors = ["Matthew Klein <mklein994@gmail.com>"]
description = "Get the wallpaper image index to use based on the position of the sun"
edition = "2021"
repository = "https://github.com/mklein994/dynamic_wallpaper"
categories = ["command-line-utilities"]
license = "MIT"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
jiff = { version = "0.1.0", features = ["serde"] }
dirs = "5.0.1"
serde = { version = "1.0.203", features = ["derive"] }
sunrise = { git = "https://github.com/mklein994/rust-sunrise" }
toml = "0.8.14"

[dev-dependencies]
lazy_static = "1.5.0"
